--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_auth: ^4.10.1
   shared_preferences: ^2.2.2
   curved_navigation_bar: ^1.0.3
+  dropdown_button2: ^2.3.9
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
