--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   intl: ^0.18.1
   http: ^1.1.0
   envied: ^0.3.0+3
+  sqflite: ^2.3.0
+  path_provider: ^2.1.1
+  
 
 dev_dependencies:
   flutter_test:
