--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   path_provider: ^2.1.1
   dio: ^5.3.3
   fluttertoast: ^8.2.2
-  
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +62,11 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   envied_generator: ^0.3.0+3
   build_runner: ^2.4.6
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/newappkicon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
